# mini-search

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  config.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
bench/: manifest.sample.json
data/: README.md
tests/: conftest.py  test_smoke.py
