[project]
name = "mini-search"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "typer>=0.16.1",
    "uvicorn[standard]>=0.35.0",
]
[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "hypothesis>=6.138.3",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-benchmark>=5.1.0",
    "ruff>=0.12.10",
]
